# jackal

jackal_control/launch/: control.launch
jackal_description/launch/: description.launch
jackal_description/urdf/: jackal.gazebo  jackal.urdf.xacro
jackal_launch/: CMakeLists.txt  package.xml
jackal_launch/launch/: jackal_hw.launch.py
jackal_robot/jackal_robot/: diagnostics_updater
jackal_robot/launch/: bringup.launch.py
