<?xml version="1.0"?>
<package format="3">
  <name>jackal_launch</name>
  <version>0.0.0</version>
  <description>The jackal_launch package</description>

  <maintainer email="ian@todo.todo">ian</maintainer>

  <license>TODO</license>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>ament_cmake</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
